package thuchanh.composite.b3;

public interface IFileComponent {
   String getStringTreeFolder(int depth);
   String getPath();
}
