@startuml
'https://plantuml.com/sequence-diagram

interface IFileComponent{
    + String getStringTreeFolder()
    + String getPath()
}
class FileComponent{
    String nameFile
    String ngayTao
    String getStringTreeFolder()
    String getPath()
}
class FolderComponent{
    String nameFolder
    String ngayTao
    ArrayList<IFileComponent> items
    void addItem();
    void removeItem();
    String getStringTreeFolder()
    String getPath()
}

FileComponent --|> IFileComponent
FolderComponent --|> IFileComponent
@enduml